--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <a class="footer-link" href="https://github.com/VipinRaiP">Github</a>
       <a class="footer-link" href="https://www.facebook.com/vipin.rai.902?ref=bookmarks">Facebook</a>
       <!--a class="footer-link" href="https://www.appbrewery.co/">Website</a>-->
-      <p class="copyright">© copyright 2019 Vipin Rai P.</p>
+      <p class="copyright">© 2019 Vipin Rai P.</p>
     </div>
 
   </body>
